# visual-drone-detector-hackathon

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
baselines/: sample_baseline.py
data/reference/sample_starter/: README.md
datasets/: README.md
datasets/manifests/: MMAUD.json  MMAUD.jsonl  MMAUD.media.jsonl  Syndrone.json  Syndrone.jsonl  anti-uav410.json  anti-uav410.jsonl  anti-uav410.media.jsonl  drone-tracking-datasets.json  drone-tracking-datasets.jsonl  drone-tracking-datasets.media.jsonl  dut-anti-uav.json  dut-anti-uav.jsonl  dut-anti-uav.media.jsonl  index.json  media-index.json  pawelczyk-wojtyra.json  pawelczyk-wojtyra.jsonl  pawelczyk-wojtyra.media.jsonl  sample-starter.json  sample-starter.public.json
scripts/: build_manifests.py
scripts/data/: download_public_dataset.py  find_resume_point.py  generate_presigned_urls.py  r2_manager.py
tests/: conftest.py  test_build_manifests.py  test_download_public_dataset.py  test_generate_presigned_urls.py  test_r2_manager.py  test_sample_baseline.py
