[project]
name = "drone-vision-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.30",
    "gdown>=5.2.0",
    "kaggle>=1.7.4.5",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "roboflow>=1.2.9",
    "requests>=2.32.3",
    "tqdm>=4.66.4",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
