[project]
name = "drone-vision-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.30",
    "gdown>=5.2.0",
    "kaggle>=1.7.4.5",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "roboflow>=1.2.9",
    "requests>=2.32.3",
    "tqdm>=4.66.4",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.ruff]
# Apply Ruff to the whole project but exclude large/unowned data
# The 'exclude' list is respected by both lint and format commands
exclude = [
    "datasets",      # user-requested: keep datasets untouched
    ".venv", "venv", "build", "dist", "__pycache__"
]
# Match project Python version
target-version = "py312"

[tool.ruff.format]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]
# Keep default Black-like style; customize here if desired later
# Options examples: quote-style = "double", indent-style = "space"
